apps/brandwatch/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: brandwatch
  namespace: default
  labels:
    app.kubernetes.io/name: brandwatch

spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: brandwatch
  template:
    metadata:
      labels:
        app.kubernetes.io/name: brandwatch
    spec:
      imagePullSecrets:
        - name: regcred

      containers:
        - name: brandwatch
          image: "margarinas/brandwatch:latest"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /up
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
          resources:
            limits:
              cpu: 1000m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 256Mi
