apps/brandwatch/horizon.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: brandwatch-horizon
  namespace: default
  labels:
    app.kubernetes.io/name: brandwatch-horizon
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: brandwatch-horizon
  template:
    metadata:
      labels:
        app.kubernetes.io/name: brandwatch-horizon
    spec:
      imagePullSecrets:
        - name: regcred
      tolerations:
        - key: node.kubernetes.io/server-usage
          operator: Equal
          value: readability
          effect: NoSchedule

      containers:
        - name: brandwatch-horizon

          image: "margarinas/brandwatch:latest"
          imagePullPolicy: IfNotPresent
          command:
            - /bin/sh
            - -c
            - "php artisan horizon"
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: "app.kubernetes.io/instance"
                    operator: In
                    values:
                      - brandwatch-horizon
              topologyKey: "kubernetes.io/hostname"
