apps/brandwatch/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: brandwatch
  namespace: default
  labels:
    app.kubernetes.io/name: brandwatch

spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: brandwatch
